Fix background images by changing background to dark green, setting correct height, and hiding on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ h1, h2, h3,  .navbar-brand {
 }
 
 body {
-    background-color: black;
+    background-color: #081517;
 }
 
 table {
@@ -87,8 +87,13 @@ h3.panel-title {
 .alley {
     position: fixed;
     top: 0;
-    max-height: 100%;
+    height: 100vh;
     z-index: -5;
+}
+@media screen and (max-width: 992px) {
+    .alley {
+        display: none;
+    }
 }
 
 .alley-left {
